--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "browserslist": "> 0.25%, not dead",
   "dependencies": {
+    "events": "^3.2.0",
     "gulp": "^4.0.2"
   },
   "devDependencies": {
