--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "axios": "^0.21.0",
     "events": "^3.2.0",
-    "gulp": "^4.0.2",
-    "stickyfilljs": "^2.1.0"
+    "gulp": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
